Replaced class hierarchy with fluent interface