@@ -15,7 +15,6 @@ import org.elasticsearch.xpack.core.security.action.role.ClearRolesCacheAction;
 import org.elasticsearch.xpack.core.security.action.role.ClearRolesCacheRequest;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
@@ -29,8 +28,10 @@ public final class RestClearRolesCacheAction extends SecurityBaseRestHandler {
     @Override
     public List<Route> routes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(new ReplacedRoute(POST, "/_security/role/{name}/_clear_cache", POST,
-            "/_xpack/security/role/{name}/_clear_cache"));
+        return List.of(
+            new Route(POST, "/_security/role/{name}/_clear_cache")
+                .replaces(POST, "/_xpack/security/role/{name}/_clear_cache")
+        );
     }
 
     @Override
