@@ -23,7 +23,6 @@ import org.elasticsearch.xpack.core.security.action.saml.SamlPrepareAuthenticati
 import org.elasticsearch.xpack.core.security.action.saml.SamlPrepareAuthenticationResponse;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
@@ -52,9 +51,9 @@ public class RestSamlPrepareAuthenticationAction extends SamlBaseRestHandler {
     @Override
     public List<Route> routes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.singletonList(
-            new ReplacedRoute(POST, "/_security/saml/prepare",
-                POST, "/_xpack/security/saml/prepare")
+        return List.of(
+            new Route(POST, "/_security/saml/prepare")
+                .replaces(POST, "/_xpack/security/saml/prepare")
         );
     }
 
